--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jimp": "^0.16.1",
     "next": "12.1.0",
     "react": "17.0.2",
+    "react-content-loader": "^6.1.0",
     "react-dom": "17.0.2",
     "react-images": "^1.2.0-beta.7",
     "react-loader-spinner": "^6.0.0-0",
