--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@fortawesome/react-fontawesome": "^0.1.17",
     "embla-carousel-react": "^6.2.0",
     "jimp": "^0.16.1",
+    "leaflet": "^1.7.1",
+    "leaflet-defaulticon-compatibility": "^0.1.1",
     "next": "12.1.0",
-    "react": "17.0.2",
+    "react": "^17.0.2",
     "react-content-loader": "^6.1.0",
-    "react-dom": "17.0.2",
+    "react-dom": "^17.0.2",
     "react-images": "^1.2.0-beta.7",
+    "react-leaflet": "^3.2.5",
     "react-loader-spinner": "^6.0.0-0",
     "react-photo-gallery-next": "^8.0.1",
     "sass": "^1.49.9"
