--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-loader-spinner": "^6.0.0-0",
     "react-photo-gallery-next": "^8.0.1",
     "react-scroll-parallax": "^3.0.4",
-    "sass": "^1.49.9"
+    "sass": "^1.49.9",
+    "sharp": "^0.30.3"
   },
   "devDependencies": {
     "eslint": "8.10.0",
