--- a/package.json
+++ b/package.json
@@ -21,13 +21,15 @@
         "react": "^17.0.2",
         "react-content-loader": "^6.1.0",
         "react-dom": "^17.0.2",
+        "react-hot-toast": "^2.2.0",
         "react-images": "^1.2.0-beta.7",
         "react-leaflet": "^3.2.5",
         "react-loader-spinner": "^6.0.0-0",
         "react-photo-gallery-next": "^8.0.1",
         "react-scroll-parallax": "^3.0.4",
         "sass": "^1.49.9",
-        "sharp": "^0.30.3"
+        "sharp": "^0.30.3",
+        "validator": "^13.7.0"
     },
     "devDependencies": {
         "eslint": "8.10.0",
