--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
         "@fortawesome/free-brands-svg-icons": "^6.0.0",
         "@fortawesome/free-solid-svg-icons": "^6.0.0",
         "@fortawesome/react-fontawesome": "^0.1.17",
+        "axios": "^0.26.1",
         "embla-carousel-react": "^6.2.0",
         "jimp": "^0.16.1",
         "leaflet": "^1.7.1",
         "leaflet-defaulticon-compatibility": "^0.1.1",
         "next": "12.1.0",
         "react": "^17.0.2",
+        "react-awesome-button": "^6.5.1",
         "react-content-loader": "^6.1.0",
         "react-dom": "^17.0.2",
         "react-hot-toast": "^2.2.0",
