--- a/package.json
+++ b/package.json
@@ -9,32 +9,35 @@
         "lint": "next lint"
     },
     "dependencies": {
-        "@fortawesome/fontawesome-svg-core": "^1.3.0",
-        "@fortawesome/free-brands-svg-icons": "^6.0.0",
-        "@fortawesome/free-solid-svg-icons": "^6.0.0",
-        "@fortawesome/react-fontawesome": "^0.1.17",
-        "axios": "^0.26.1",
-        "embla-carousel-react": "^6.2.0",
-        "jimp": "^0.16.1",
-        "leaflet": "^1.7.1",
-        "leaflet-defaulticon-compatibility": "^0.1.1",
-        "next": "12.1.0",
-        "react": "^17.0.2",
-        "react-awesome-button": "^6.5.1",
-        "react-content-loader": "^6.1.0",
-        "react-dom": "^17.0.2",
-        "react-hot-toast": "^2.2.0",
-        "react-images": "^1.2.0-beta.7",
-        "react-leaflet": "^3.2.5",
-        "react-loader-spinner": "^6.0.0-0",
+        "@fortawesome/fontawesome-svg-core": "^6.7.2",
+        "@fortawesome/free-brands-svg-icons": "^6.7.2",
+        "@fortawesome/free-solid-svg-icons": "^6.7.2",
+        "@fortawesome/react-fontawesome": "^0.2.2",
+        "axios": "^1.7.9",
+        "embla-carousel-react": "^8.5.2",
+        "jimp": "^1.6.0",
+        "leaflet": "^1.9.4",
+        "leaflet-defaulticon-compatibility": "^0.1.2",
+        "next": "15.1.6",
+        "photoswipe": "^5.4.4",
+        "react": "^19.0.0",
+        "react-awesome-button": "^7.0.5",
+        "react-content-loader": "^7.0.2",
+        "react-dom": "^19.0.0",
+        "react-hot-toast": "^2.5.1",
+        "react-images": "1.2.0-beta.7",
+        "react-leaflet": "^5.0.0",
+        "react-loader-spinner": "^6.1.6",
+        "react-masonry-css": "^1.0.16",
         "react-photo-gallery-next": "^8.0.1",
-        "react-scroll-parallax": "^3.0.4",
-        "sass": "^1.49.9",
-        "sharp": "^0.30.3",
-        "validator": "^13.7.0"
+        "react-photoswipe-gallery": "^3.0.2",
+        "react-scroll-parallax": "^3.4.5",
+        "sass": "^1.83.4",
+        "sharp": "^0.33.5",
+        "validator": "^13.12.0"
     },
     "devDependencies": {
-        "eslint": "8.10.0",
-        "eslint-config-next": "12.1.0"
+        "eslint": "9.19.0",
+        "eslint-config-next": "15.1.6"
     }
 }
