--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@fortawesome/free-brands-svg-icons": "^6.7.2",
         "@fortawesome/free-solid-svg-icons": "^6.7.2",
         "@fortawesome/react-fontawesome": "^0.2.2",
+        "@react-three/fiber": "9.0.0-alpha.8",
         "axios": "^1.7.9",
         "jimp": "^1.6.0",
         "leaflet": "^1.9.4",
@@ -20,7 +21,6 @@
         "next": "15.1.6",
         "photoswipe": "^5.4.4",
         "react": "^19.0.0",
-        "react-awesome-button": "^7.0.5",
         "react-content-loader": "^7.0.2",
         "react-dom": "^19.0.0",
         "react-hot-toast": "^2.5.1",
